--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
                     <div class="card-summary">
                         summary
+                        <canvas id="weathersummary"></canvas>
                     </div>
                 </div>
             </div>
@@ -71,6 +72,9 @@
 
     </main>
 </body>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="./js/config.js"></script>
 <script src="./js/scripts.js"></script>
 
 </html>
