--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Dash</title>
+    <title>Home Dashboard</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -55,7 +55,7 @@
 
                     <div class="card-summary">
                         summary
-                        
+
                     </div>
                 </div>
             </div>
