Tailwind CLI setup and cleanup

--- a/index.html
+++ b/index.html
@@ -10,18 +10,6 @@
         integrity="sha384-xBXmu0dk1bEoiwd71wOonQLyH+VpgR1XcDH3rtxrLww5ajNTuMvBdL5SOiFZnNdp"
         crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        clifford: '#da373d',
-                    }
-                }
-            }
-        }
-    </script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -174,17 +162,17 @@
                         Weather Prediction
                     </div>
                     <div class="col-span-1">
-                        Tomoroe
+                        Tomorow
                     </div>
                 </div>
             </div>
         </div>
     </main>
 </body>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="./apikeys.js"></script>
-<script src="./js/config.js"></script>
-<script src="./js/scripts.js"></script>
+<script  src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script  src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script  src="/apikeys.js"></script>
+<script  src="/js/config.js"></script>
+<script  src="/js/scripts.js"></script>
 
 </html>
