--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script defer src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"
         integrity="sha384-xBXmu0dk1bEoiwd71wOonQLyH+VpgR1XcDH3rtxrLww5ajNTuMvBdL5SOiFZnNdp"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -43,8 +42,8 @@
                         </div>
                     </div>
                 </div>
-                <div>
-                    <select id="weatherlocation" name="weatherlocation">
+                <div class="">
+                    <select class="px-1 py-1" id="weatherlocation" name="weatherlocation">
                         <option value="Nairobi" selected>Nairobi</option>
                         <option value="Mombasa">Mombasa</option>
                         <option value="select">Auto select</option>
